--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -50,19 +50,18 @@
 									<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
-											<h3>Why you should wear a mask</h3>
+											<h3>Political Polarization</h3>
 										</header>
-										<p>Empty</p>
+										<p>Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. </p>
 									</section>
 									<section class="box">
 										<header>
 											<h3>More information on the mask order</h3>
 										</header>
 										<ul class="divided">
-											<li><a href="#">Sed et blandit consequat sed</a></li>
-											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
-											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
+											<li><a href="https://www.texastribune.org/">Texas Tribune</a></li>
+											<li><a href="https://www.houstonchronicle.com/">Houston Chronicle</a></li>
+											<li><a href="https://www.cdc.gov/">Center for Disease Control</a></li>
 										</ul>
 									</section>
 
@@ -71,40 +70,28 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h2>Information on the Mask Order</h2>
 										</header>
 										<p>
-											filler
+											Harris County Judge Lina Hidalgo passed an order mandating mask usage throughout the county. The chart below made by the Houston Chronicle outlines some of the rules in the order.
 										</p>
-										<p>
-											more filler
-										</p>
-										<!-- section
+											<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+
+										<section>
 											<header>
-												<h3>Something else</h3>
+												<h3>Why you should wear a mask</h3>
 											</header>
 											<p>
-												Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-												placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
+												Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. Studies show that mask wearing easily reduces the possibility of spreading and recieving coronavirus. Hong Kong is an absolute example. Despite having a similar density and proximity to Wuhan, it has only 4 coronavirus deaths, compared to Wuhan's 2,500. When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day.
 											</p>
-											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
-											</p>
-										section -->
+										</section>
 										<section>
 											<header>
 												<h3>So in conclusion ...</h3>
 											</header>
 											<p>
-												Make sure to follow the order
+												Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
 											</p>
 										</section>
 									</article>
