--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -76,7 +76,7 @@
 										<p>
 											Harris County Judge Lina Hidalgo passed an order mandating mask usage throughout the county. The chart below made by the Houston Chronicle outlines some of the rules in the order.
 										</p>
-											<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 
 										<section>
 											<header>
