--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -54,43 +54,31 @@
 											<h2>Mask Advice</h2>
 										</header>
 										<p>
-											more filler
+											Face masks are critical to stopping the coronavirus as they block germs containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when applied onto the face properly, protecting all the vulnerable areas. 
 										</p>
-										<p>
-											filler
-										</p>
-										<!-- section
+										<section>
 											<header>
-												<h3>Something else</h3>
+												<h3>Types of Masks</h3>
 											</header>
 											<p>
-												Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-												placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
+												The CDC recommends for those going out in public wearing a scarf or homemade mask to stop droplets from coming in contact with the mouth and preventing the spread of the virus to other people. See more on homemade masks to the right.
 											</p>
 											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus.
+												N-95 Masks are the most affective masks and can block 95 percent of particles .3 microns or larger, according to the FDA. They have a metal nose piece that the wearer can use to mold their face and have a snug fit, a filter built-in with air holes to make breathing easier, and ear loops that ensure a comfortable mask experience. BUT note that these masks are not a luxury and that they should be reserved for healthcare workers and other people on the frontline. 	
+											</p>
+											<p>
+												While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection.												
 											</p>
 										</section>
 										<section>
 											<header>
-												<h3>So in conclusion ...</h3>
+												<h3>Best Materials for Making Masks</h3>
 											</header>
 											<p>
-												Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-												eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-												elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-												sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-												Maecenas sagittis convallis justo vel mattis.
+												A study tested multiple different materials (cloth, wool, etc.) and checked their ability to stop the virus as well as breathability (because you can't have a mask without being able to breath) The top five materials are denim, bed sheets, paper towels, canvas, and shop towels. NOT SCARFS, NOT T-SHIRTS, NOT PILLOWCASES. The study recommends using more than one layer of fabric to ensure safety. 
 											</p>
 										</section>
 									</article>
-								-->
 							</div>
 
 							<div class="col-4 col-12-medium">
@@ -100,9 +88,30 @@
 									<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
-											<h3>How to Wear and Take of a Mask</h3>
+											<h3>How to Wear a Mask</h3>
 										</header>
-										<p>filler</p>
+										<p>Wearing your mask snugly will ensure that your mask is covering the majority of your face exposing no weak spots. If you have a storebought mask or a homemade mask, make sure that you have ties or ear loops to prevent the mask from falling off. If the mask fits well, then the top should be located just below your eyes, the bottom curving around to the bottom of your chin. If not, MAKE SURE THAT YOUR NOSE AND MOUTH ARE AT LEAST COVERED!  It is too big of a risk to take, and you are better off trying a new size or not going outside at all.</p>
+									</section>
+									<section class="box">
+										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+										<header>
+											<h3>How to Remove a Mask</h3>
+										</header>
+										<p>Remember that things you touch (like groceries, doorknobs) can harbor the coronavirus, sometimes for days.  The first thing you should do before taking off your mask is to remove and trash your gloves, then wash your hands. Afterward, remove the left ear loop and slowly peel the mask from your face, subsequently detaching the right loop. If the mask is disposable, throw it away immediately and wash your hands again. If you follow these steps, then you will greatly decrease the chance of getting coronavirus.</p>
+									</section>
+									<section class="box">
+																		<section class="box">
+										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+										<header>
+											<h3>Making Homemade Masks by the CDC</h3>
+										</header>
+										<ol>
+											<li> Use a bandanna or other square of cloth measuring about 20 inches on each side. </li>
+											<li> Fold it in half. Then fold the top third down and the bottom third up so you have a long rectangle. </li>
+											<li> Slide the rectangle through two rubber bands or elastic hair ties until they're about 6 inches apart. </li>
+											<li> Fold the sides of the fabric in toward the middle, and tuck the ends together. </li>
+											<li> Hook the elastics over your ears and adjust the fabric so it's snug against your face but not too tight. </li>
+										</ol>
 									</section>
 									<section class="box">
 										<header>
