--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -79,7 +79,6 @@
 										</p>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										<section class="box">
-											<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 											<header>
 												<h3>Political Polarization</h3>
 											</header>
@@ -90,7 +89,7 @@
 												<h3>So in conclusion ...</h3>
 											</header>
 											<p>
-												Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
+												Follow Hidalgo's Order! Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
 											</p>
 										</section>
 									</article>
