--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -80,12 +80,14 @@
 											</p>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										</section>
-										<header>
-											<h2>To Mask or Not to Mask? Lina Hidalgo's Mask Orer</h2>
-										</header>
-										<p>
-											Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. 
-										</p>
+										<section>
+											<header>
+												<h2>To Mask or Not to Mask? Political Polarization of the Mask Order</h2>
+											</header>
+											<p>
+												Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. 
+											</p>
+										</section>
 										<section>
 											<header>
 												<h3>So in conclusion ...</h3>
