--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -51,9 +51,12 @@
 										<header>
 											<h3>Why you should wear a mask</h3>
 										</header>
-										<p>
-											Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. Studies show that mask wearing easily reduces the possibility of spreading and recieving coronavirus. Hong Kong is an absolute example. Despite having a similar density and proximity to Wuhan, it has only 4 coronavirus deaths, compared to Wuhan's 2,500. When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day.
-										</p>
+										<ul>
+											<li> Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. </li> 
+											<li> Studies show that mask wearing easily reduces the possibility of spreading and recieving coronavirus. </li>
+											<li> Hong Kong is a great example showing how mask wearing can save lives. Despite having a similar density and proximity to Wuhan (epicenter of the Coronavirus), it has only 4 coronavirus deaths, compared to Wuhan's 2,500. </li>
+											<li> When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day. </li>
+										</ul>
 									</section>
 									<section class="box">
 										<header>
@@ -83,6 +86,7 @@
 										<section>
 											<header>
 												<h2>To Mask or Not to Mask?</h2>
+												</div>
 												<h3> The Political Polarization of the Mask Order </h3>
 											</header>
 											<p>
@@ -91,7 +95,7 @@
 										</section>
 										<section>
 											<header>
-												<h3>So in conclusion ...</h3>
+												<h2>So in conclusion ...</h2>
 											</header>
 											<p>
 												Follow Hidalgo's Order! Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
