--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -1,3 +1,4 @@
+ 
 <!DOCTYPE HTML>
 <!--
 	Dopetrope by HTML5 UP
@@ -51,12 +52,9 @@
 										<header>
 											<h3>Why you should wear a mask</h3>
 										</header>
-										<ul>
-											<li> Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. </li> 
-											<li> Studies show that mask wearing easily reduces the possibility of spreading and recieving coronavirus. </li>
-											<li> Hong Kong is a great example showing how mask wearing can save lives. Despite having a similar density and proximity to Wuhan (epicenter of the Coronavirus), it has only 4 coronavirus deaths, compared to Wuhan's 2,500. </li>
-											<li> When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day. </li>
-										</ul>
+										<p>
+											Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. Studies show that mask wearing easily reduces the possibility of spreading and recieving coronavirus. Hong Kong is an absolute example. Despite having a similar density and proximity to Wuhan, it has only 4 coronavirus deaths, compared to Wuhan's 2,500. When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day.
+										</p>
 									</section>
 									<section class="box">
 										<header>
@@ -88,12 +86,12 @@
 												<h2>To Mask or Not to Mask?</h2>
 											</header>
 											<p>
-												Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. 
+												Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. 
 											</p>
 										</section>
 										<section>
 											<header>
-												<h2>So in conclusion ...</h2>
+												<h3>So in conclusion ...</h3>
 											</header>
 											<p>
 												Follow Hidalgo's Order! Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
