--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -81,7 +81,7 @@
 											</p>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										</section>
-										<section>
+										<section class = "box">
 											<header>
 												<h2>To Mask or Not to Mask?</h2>
 											</header>
