--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -71,23 +71,18 @@
 
 								<!-- Content -->
 									<article class="box post">
+										<header>
+											<h2>Information on the Mask Order</h2>
+										</header>
+										<p>
+											Harris County Judge Lina Hidalgo passed an order mandating mask usage throughout the county. The chart below made by the Houston Chronicle outlines some of the rules in the order.
+										</p>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										<section class="box">
 											<header>
-												<h2>Information on the Mask Order</h2>
+												<h3>Political Polarization</h3>
 											</header>
-											<p>
-												Harris County Judge Lina Hidalgo passed an order mandating mask usage throughout the county. The chart below made by the Houston Chronicle outlines some of the rules in the order.
-											</p>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-										</section>
-										<section>
-											<header>
-												<h2>To Mask or Not to Mask?</h2>
-												<h3> The Political Polarization of the Mask Order </h3>
-											</header>
-											<p>
-												Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. 
-											</p>
+											<p>Harris County Judge Lina Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion. </p>
 										</section>
 										<section>
 											<header>
