--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -47,7 +47,7 @@
 							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
-									<section class = "box">												<section class = "box">
+									<section class = "box">												
 										<header>
 											<h3>Why you should wear a mask</h3>
 										</header>
