--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>The Masketeer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -82,22 +82,6 @@
 												Harris County Judge Lina Hidalgo passed an order mandating mask usage throughout the county. The chart below made by the Houston Chronicle outlines some of the rules in the order.
 											</p>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-										</section>
-										<section>
-											<header>
-												<h2>To Mask or Not to Mask: The Problem</h2>
-											</header>
-											<p>
-												Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not.
-											</p>
-										</section>
-										<section>
-											<header>
-												<h2>So in conclusion ...</h2>
-											</header>
-											<p>
-												Follow Hidalgo's Order! Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
-											</p>
 										</section>
 									</article>
 
