--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -49,9 +49,10 @@
 								<header>
 									<h2>Mask FAQs</h2>
 								</header>
-								<p>
-									filler
-								</p>
+								<ol>
+									<li> What are masks? </li>
+									<li> Why are they important </li>
+								</ol>
 								<p>
 									more filler
 								</p>
