--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -83,6 +83,22 @@
 											</p>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										</section>
+										<section>
+											<header>
+												<h2>To Mask or Not to Mask: The Problem</h2>
+											</header>
+											<p>
+												Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not.
+											</p>
+										</section>
+										<section>
+											<header>
+												<h2>So in conclusion ...</h2>
+											</header>
+											<p>
+												Follow Hidalgo's Order! Wearing a mask is extremely important as it helps stop the coronavirus. Better to be safe than sorry!
+											</p>
+										</section>
 									</article>
 
 							</div>
