--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -56,20 +56,6 @@
 										<p>
 											Face masks are critical to stopping the coronavirus as they block germs containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when applied onto the face properly, protecting all the vulnerable areas. 
 										</p>
-										<section>
-											<header>
-												<h3>Types of Masks</h3>
-											</header>
-											<p>
-												The CDC recommends for those going out in public wearing a scarf or homemade mask to stop droplets from coming in contact with the mouth and preventing the spread of the virus to other people. See more on homemade masks to the right.
-											</p>
-											<p>
-												N-95 Masks are the most affective masks and can block 95 percent of particles .3 microns or larger, according to the FDA. They have a metal nose piece that the wearer can use to mold their face and have a snug fit, a filter built-in with air holes to make breathing easier, and ear loops that ensure a comfortable mask experience. BUT note that these masks are not a luxury and that they should be reserved for healthcare workers and other people on the frontline. 	
-											</p>
-											<p>
-												While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection.												
-											</p>
-										</section>
 										<section class="box">
 																		<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
@@ -92,6 +78,20 @@
 												A study tested multiple different materials (cloth, wool, etc.) and checked their ability to stop the virus as well as breathability (because you can't have a mask without being able to breath) The top five materials are denim, bed sheets, paper towels, canvas, and shop towels. NOT SCARFS, NOT T-SHIRTS, NOT PILLOWCASES. The study recommends using more than one layer of fabric to ensure safety. 
 											</p>
 										</section>
+										<section>
+											<header>
+												<h3>Types of Masks</h3>
+											</header>
+											<p>
+												The CDC recommends for those going out in public wearing a scarf or homemade mask to stop droplets from coming in contact with the mouth and preventing the spread of the virus to other people. See more on homemade masks to the right.
+											</p>
+											<p>
+												N-95 Masks are the most affective masks and can block 95 percent of particles .3 microns or larger, according to the FDA. They have a metal nose piece that the wearer can use to mold their face and have a snug fit, a filter built-in with air holes to make breathing easier, and ear loops that ensure a comfortable mask experience. BUT note that these masks are not a luxury and that they should be reserved for healthcare workers and other people on the frontline. 	
+											</p>
+											<p>
+												While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection.												
+											</p>
+										</section>
 									</article>
 							</div>
 
@@ -104,14 +104,25 @@
 										<header>
 											<h3>How to Wear a Mask</h3>
 										</header>
-										<p>Wearing your mask snugly will ensure that your mask is covering the majority of your face exposing no weak spots. If you have a storebought mask or a homemade mask, make sure that you have ties or ear loops to prevent the mask from falling off. If the mask fits well, then the top should be located just below your eyes, the bottom curving around to the bottom of your chin. If not, MAKE SURE THAT YOUR NOSE AND MOUTH ARE AT LEAST COVERED!  It is too big of a risk to take, and you are better off trying a new size or not going outside at all.</p>
+										<p>Wearing your mask snugly will ensure that your mask is covering the majority of your face exposing no weak spots. </p>
+										<ol>	
+											<li> If you have a storebought mask or a homemade mask, make sure that you have ties or ear loops to prevent the mask from falling off. </li> 
+											<li> If the mask fits well, then the top should be located just below your eyes, the bottom curving around to the bottom of your chin. </li>
+											<li> If not, MAKE SURE THAT YOUR NOSE AND MOUTH ARE AT LEAST COVERED!  It is too big of a risk to take, and you are better off trying a new size or not going outside at all. </li>
+										</ol>
 									</section>
 									<section class="box">
 										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 										<header>
 											<h3>How to Remove a Mask</h3>
 										</header>
-										<p>Remember that things you touch (like groceries, doorknobs) can harbor the coronavirus, sometimes for days.  The first thing you should do before taking off your mask is to remove and trash your gloves, then wash your hands. Afterward, remove the left ear loop and slowly peel the mask from your face, subsequently detaching the right loop. If the mask is disposable, throw it away immediately and wash your hands again. If you follow these steps, then you will greatly decrease the chance of getting coronavirus.</p>
+										<p>Remember that things you touch (like groceries, doorknobs) can harbor the coronavirus, sometimes for days. </p>  
+										<ol> 
+											<li> The first thing you should do before taking off your mask is to remove and trash your gloves, then wash your hands. </li>
+											<li> Afterward, remove the left ear loop and slowly peel the mask from your face, subsequently detaching the right loop. </li>
+											<li> If the mask is disposable, throw it away immediately and wash your hands again. </li>
+											<li> If you follow these steps, then you will greatly decrease the chance of getting coronavirus. </li>
+										</ol>
 									</section>
 									<section class="box">
 										<header>
