--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -74,7 +74,7 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<section class="box">
+										<section>
 											<header>
 												<h2>Information on the Mask Order</h2>
 											</header>
