--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -49,7 +49,7 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/maskwearers2.jpeg" alt="" /></a>
 										<header>
 											<h2>Mask Advice</h2>
 										</header>
