--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is the Masketeer.</h2>
+								<h2>The Masketeer.</h2>
 								<p>A Houston area website to give information on masks</p>
 							</header>
 						</section>
@@ -51,7 +51,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<i class="icon solid featured fa-cog"></i>
+										<i class="fas fa-university"></i>
 										<header>
 											<h2>Masketeer #1 - The Order</h2>
 										</header>
@@ -60,7 +60,7 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
-										<i class="icon solid featured alt fa-bolt"></i>
+										<i class="fas fa-comment-medical"></i>
 										<header>
 											<h2>Masketeer #2 - Mask Advice</h2>
 										</header>
@@ -69,7 +69,7 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="last">
-										<i class="icon solid featured alt2 fa-star"></i>
+										<i class="fas fa-question"></i>										
 										<header>
 											<h2>Masketeer #3</h2>
 										</header>
