--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<i class="fas fa-university"></i>
+										<i class="icon solid featured alt2 fa-university"></i>
 										<header>
 											<h2>Masketeer #1 - The Order</h2>
 										</header>
@@ -60,7 +60,7 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
-										<i class="fas fa-comment-medical"></i>
+										<i class="icon solid featured alt2 fa-comment-medical"></i>
 										<header>
 											<h2>Masketeer #2 - Mask Advice</h2>
 										</header>
@@ -69,7 +69,7 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="last">
-										<i class="fas fa-question"></i>										
+										<i class="icon solid featured alt2 fa-question"></i>										
 										<header>
 											<h2>Masketeer #3</h2>
 										</header>
