--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<i class="icon solid featured alt2 fa-university"></i>
+										<a href="left-sidebar.html"> <i class="icon solid featured alt2 fa-university"></i> </a>
 										<header>
-											<h2>Masketeer #1 - The Order</h2>
+											<a href="left-sidebar.html"><h2>Masketeer #1 - The Order</h2> </a>
 										</header>
 										<p>In April Harris County Judge Lina Hidalgo passed an order mandating mask wear. Find the constitutionality of this decision and the public reaction.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
-										<i class="icon solid featured alt2 fa-comment-medical"></i>
+										<a href="right-sidebar.html"> <i class="icon solid featured alt2 fa-comment-medical"></i> </a>
 										<header>
-											<h2>Masketeer #2 - Mask Advice</h2>
+											<a href="right-sidebar.html"> <h2>Masketeer #2 - Mask Advice</h2> </a>
 										</header>
 										<p>In this section, discover the ways to make sure your journey through the pandemic is as safe as possible with these easy tips on masks.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="last">
-										<i class="icon solid featured alt2 fa-question"></i>										
+										<a href="no-sidebar.html"><i class="icon solid featured alt2 fa-question"></i> </a>									
 										<header>
-											<h2>Masketeer #3</h2>
+											<a href="no-sidebar.html"> <h2>Masketeer #3</h2> </a>
 										</header>
 										<p>Finally, answer your biggest questions about masks and mask safety to ensure your confindent in yourself and science when going out during the coronavirus.</p>
 									</section>
