--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -130,14 +130,11 @@
 										</header>
 										<p>fillers</p>
 										<ul class="divided">
-											<li><a href="#">Sed et blandit consequat sed</a></li>
-											<li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-											<li><a href="#">Sapien id suscipit magna sed felis</a></li>
-											<li><a href="#">Aptent taciti sociosqu ad litora</a></li>
+											<li><a href="who.int">World Health Organization</a></li>
+											<li><a href="cdc.gov">Center for Disease Control</a></li>
+											<li><a href="https://www.mayoclinic.org/coronavirus-covid-19">Mayo Clinic</a></li>
+											<li><a href="https://www.houstonmethodist.org/coronavirus/coronavirus-resources/">Houston Methodist</a></li>
 										</ul>
-										<footer>
-											<a href="#" class="button alt">Ipsum consequat</a>
-										</footer>
 									</section>
 
 							</div>
