--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -128,7 +128,7 @@
 										<header>
 											<h3>Mask Resources</h3>
 										</header>
-										<p>fillers</p>
+										<p>These resources will provide more information about COVID-19 and masks.</p>
 										<ul class="divided">
 											<li><a href="who.int">World Health Organization</a></li>
 											<li><a href="cdc.gov">Center for Disease Control</a></li>
