--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#">Menu</a>
 								<ul>
@@ -34,7 +34,7 @@
 							</li>
 							<li><a href="left-sidebar.html">The Mask Order</a></li>
 							<li><a href="right-sidebar.html">Mask Advice</a></li>
-							<li><a href="no-sidebar.html">Mask FAQs</a></li>
+							<li class="current"><a href="no-sidebar.html">Mask FAQs</a></li>
 						</ul>
 					</nav>
 				</section>
