--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -45,17 +45,15 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
 									<h2>Mask FAQs</h2>
 								</header>
-								<ol>
-									<li> What are masks? </li>
-									<li> Why are they important </li>
-								</ol>
-								<p>
-									more filler
-								</p>
+								<section class = "box">
+									<h3> Why are masks important? </h3>
+									<p>
+										They protect coronavirus infected droplets from entering and exiting your mouth.
+									</p>
+								</section>
 								<!-- <section>
 									<header>
 										<h3>Something else</h3>
