--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -44,14 +44,29 @@
 					<div class="container">
 
 						<!-- Content -->
-							<article class="box post">
-								<header>
-									<h2>Mask FAQs</h2>
-								</header>
+								<h2>Mask FAQs</h2>
 								<section class = "box">
 									<h3> Why are masks important? </h3>
 									<p>
 										They protect coronavirus infected droplets from entering and exiting your mouth.
+									</p>
+								</section>
+								<section class = "box">
+									<h3> What types of materials are best for masks? </h3>
+									<p>
+										Denim and stuff.
+									</p>
+								</section>
+								<section class = "box">
+									<h3> When can I be "exempt" from wearing a mask? </h3>
+									<p>
+										If you are doing in action which does not require you to be around other people, you don't have to wear a mask.
+									</p>
+								</section>
+								<section class = "box">
+									<h3> If I wear a mask, am I exempt from social distancing? </h3>
+									<p>
+										Your choice really.
 									</p>
 								</section>
 								<!-- <section>
