--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -44,7 +44,9 @@
 					<div class="container">
 
 						<!-- Content -->
-								<h2>Mask FAQs</h2>
+						<center> <h1>Mask FAQs</h1> </center>
+								</br>
+								</br>
 								<section class = "box">
 									<h3> Why are masks important? </h3>
 									<p>
