--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -44,7 +44,7 @@
 					<div class="container">
 
 						<!-- Content -->
-						<center> <h1>Mask FAQs</h1> </center>
+						 <h1> <center> Mask FAQs </center> </h1> 
 								</br>
 								</br>
 								<section class = "box">
