--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<section id="banner">
 							<header>
 								<h2>The Masketeer.</h2>
-								<p>A Houston area website to give information on masks</p>
+								<p>A website to give information on masks during COVID-19</p>
 							</header>
 						</section>
 
