--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>The Masketeer.</h2>
+								<h2>The Masketeer</h2>
 								<p>A website to give information on masks during COVID-19</p>
 							</header>
 						</section>
