--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li class="current" color = "#008CBA"><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Menu</a>
 									<ul>
