--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -32,7 +32,7 @@
 									<li><a href="no-sidebar.html">Mask FAQs</a></li>
 								</ul>
 							</li>
-							<li class="current" ><a href="left-sidebar.html">The Mask Order</a></li>
+							<li class="current" color = "#008CBA"><a href="left-sidebar.html">The Mask Order</a></li>
 							<li><a href="right-sidebar.html">Mask Advice</a></li>
 							<li><a href="no-sidebar.html">Mask FAQs</a></li>
 						</ul>
