--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -34,7 +34,7 @@
 							</li>
 							<li><a href="left-sidebar.html">The Mask Order</a></li>
 							<li><a href="right-sidebar.html">Mask Advice</a></li>
-							<li class="current"><a href="no-sidebar.html">Mask FAQs</a></li>
+							<li class="current" color = "#008CBA"><a href="no-sidebar.html">Mask FAQs</a></li>
 						</ul>
 					</nav>
 				</section>
