--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -33,7 +33,7 @@
 										</ul>
 									</li>
 									<li><a href="left-sidebar.html">The Mask Order</a></li>
-									<li class="current"><a href="right-sidebar.html">Mask Advice</a></li>
+									<li class="current" color = "#008CBA"><a href="right-sidebar.html">Mask Advice</a></li>
 									<li><a href="no-sidebar.html">Mask FAQs</a></li>
 								</ul>
 							</nav>
