--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -50,7 +50,7 @@
 								<section class = "box">
 									<h3> Why are masks important? </h3>
 									<p>
-										They protect coronavirus infected droplets from entering and exiting your mouth.
+										Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then contraction of coronavirus can be prevented.
 									</p>
 								</section>
 								<section class = "box">
@@ -62,7 +62,7 @@
 								<section class = "box">
 									<h3> When can I be "exempt" from wearing a mask? </h3>
 									<p>
-										If you are doing in action which does not require you to be around other people, you don't have to wear a mask.
+										If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical.
 									</p>
 								</section>
 								<section class = "box">
