--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -44,7 +44,7 @@
 					<div class="container">
 
 						<!-- Content -->
-								<h1> Mask FAQs </h1> 
+								<div class = "a"> <h1> Mask FAQs </h1> </div>
 								</br>
 								</br>
 								<section class = "box">
