--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -75,6 +75,10 @@
 										<li> While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection. </il>	
 									</ol>
 							</section>
+							<section class = "box">
+								<h3> Who should not wear masks? </h3>
+									<p> Children under the age of 2 should not wear masks as it will be difficult for them to breathe. Anyone else who has trouble breathing or is incapacitated does not have to wear a mask. 
+							</section>
 							<!-- <section>
 								<header>
 									<h3>Something else</h3>
