--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -44,8 +44,9 @@
 					<div class="container">
 
 						<!-- Content -->
+						  <article class="box post">
 							<header>
-								<div class = "a"> <h1> Mask FAQs </h1> </div>
+								<h1> Mask FAQs </h1> 
 							</header>
 							</br>
 							</br>
@@ -113,7 +114,7 @@
 									Maecenas sagittis convallis justo vel mattis.
 								</p>
 							</section> -->
-						</article>
+					</article>
 
 				</div>
 			</section>
