--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -46,7 +46,7 @@
 						<!-- Content -->
 						  <article class="box post">
 							<header>
-								<h2> Mask FAQs </h2> 
+								<div class = "a"> <h2> Mask FAQs </h2> </div>
 							</header>
 							</br>
 							</br>
