--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										<header>
 											<a style="text-decoration:none" href="left-sidebar.html" ><h2>Masketeer #1 - The Order</h2> </a>
 										</header>
-										<p>In April Harris County Judge Lina Hidalgo passed an order mandating mask wear. Find the constitutionality of this decision and the public reaction.</p>
+										<p>In April Harris County Judge Lina Hidalgo passed an order mandating mask wear. Here you can find out the constitutionality of this decision and the public reaction.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -56,7 +56,7 @@
 										<header>
 											<a style="text-decoration:none" href="right-sidebar.html"> <h2>Masketeer #2 - Mask Advice</h2> </a>
 										</header>
-										<p>In this section, discover the ways to make sure your journey through the pandemic is as safe as possible with these easy tips on masks.</p>
+										<p>In this section, you can discover ways to make your journey through the pandemic as safe as possible with these easy tips on masks.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -65,7 +65,7 @@
 										<header>
 											<a style="text-decoration:none" href="no-sidebar.html"> <h2>Masketeer #3</h2> </a>
 										</header>
-										<p>Finally, answer your biggest questions about masks and mask safety to ensure your confindent in yourself and science when going out during the coronavirus.</p>
+										<p>Finally, answer your biggest questions about masks and mask safety to ensure you're confident you'll be safe when going out during the coronavirus.</p>
 									</section>
 								</div>
 							</div>
