--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -43,6 +43,13 @@
 							</br>
 							</br>
 							<section class = "box">
+								<h3> Is the coronavirus still relevant? </h3> 
+								<p>
+									Despite lockdowns being lifted in some states, the coronavirus is still raging across the U.S. Scientists expect a "second wave" of the disease to hit again, and it is necessary for us to be prepared. 
+
+								</p>
+							</section>
+							<section class = "box">
 								<h3> Why are masks important? </h3>
 								<p>
 									Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then the contraction of coronavirus can be prevented.
@@ -230,14 +237,6 @@
 								</section> -->
 							</div>
 							<div class="col-12">
-
-								<!-- Copyright -->
-									<div id="copyright">
-										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
-									</div>
-
 							</div>
 						</div>
 					</div>
