--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -49,18 +49,17 @@
 											Face masks are critical to stopping the coronavirus as they block germs containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when applied onto the face properly, protecting all the vulnerable areas. 
 										</p>
 										<section class="box">
-																		<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-										<header>
-											<h3>Making Homemade Masks by the CDC</h3>
-										</header>
-										<ol>
-											<li> Use a bandanna or other square of cloth measuring about 20 inches on each side. </li>
-											<li> Fold it in half. Then fold the top third down and the bottom third up so you have a long rectangle. </li>
-											<li> Slide the rectangle through two rubber bands or elastic hair ties until they're about 6 inches apart. </li>
-											<li> Fold the sides of the fabric in toward the middle, and tuck the ends together. </li>
-											<li> Hook the elastics over your ears and adjust the fabric so it's snug against your face but not too tight. </li>
-										</ol>
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/M4olt47pr_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<header>
+												<h3>Making Homemade Masks by the CDC</h3>
+											</header>
+											<ol>
+												<li> Use a bandanna or other square of cloth measuring about 20 inches on each side. </li>
+												<li> Fold it in half. Then fold the top third down and the bottom third up so you have a long rectangle. </li>
+												<li> Slide the rectangle through two rubber bands or elastic hair ties until they're about 6 inches apart. </li>
+												<li> Fold the sides of the fabric in toward the middle, and tuck the ends together. </li>
+												<li> Hook the elastics over your ears and adjust the fabric so it's snug against your face but not too tight. </li>
+											</ol>
 										</section>
 										<section class="box">
 											<header>
