--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -49,7 +49,6 @@
 											Face masks are critical to stopping the coronavirus as they block germs containing the virus from entering the respiratory system (nose and mouth especially). However, they only work when applied onto the face properly, protecting all the vulnerable areas. 
 										</p>
 										<section class="box">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/M4olt47pr_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<header>
 												<h3>Making Homemade Masks by the CDC</h3>
 											</header>
@@ -81,7 +80,7 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=61&end=100" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<header>
 											<h3>How to Wear a Mask</h3>
 										</header>
@@ -93,7 +92,7 @@
 										</ol>
 									</section>
 									<section class="box">
-										<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=101&end=127" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<header>
 											<h3>How to Remove a Mask</h3>
 										</header>
