--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -80,7 +80,7 @@
 
 								<!-- Sidebar -->
 									<section class="box">
-										<iframe width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=61&end=100" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe class = "image featured" width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=61&end=100" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<header>
 											<h3>How to Wear a Mask</h3>
 										</header>
@@ -92,7 +92,7 @@
 										</ol>
 									</section>
 									<section class="box">
-										<iframe width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=101&end=127" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe class = "image featured" width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=101&end=127" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<header>
 											<h3>How to Remove a Mask</h3>
 										</header>
