--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -79,7 +79,7 @@
 
 
 								<!-- Sidebar -->
-									<section class="box">
+									<section class="box2">
 										<iframe class = "image featured" width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=61&end=100" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<header>
 											<h3>How to Wear a Mask</h3>
@@ -91,7 +91,7 @@
 											<li> If not, MAKE SURE THAT YOUR NOSE AND MOUTH ARE AT LEAST COVERED!  It is too big of a risk to take, and you are better off trying a new size or not going outside at all. </li>
 										</ol>
 									</section>
-									<section class="box">
+									<section class="box2">
 										<iframe class = "image featured" width="280" height="315" src="https://www.youtube.com/embed/M4olt47pr_o?start=101&end=127" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<header>
 											<h3>How to Remove a Mask</h3>
